--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             Создавай великолепные фотоальбомы и коллажи автоматически. Загружай фото, выбирай лучшие снимки и позволь нашему алгоритму сделать магию.
         </p>
         <div class="hero-actions">
-            <a href="/api/schema/swagger-ui/" class="btn btn-primary btn-lg">Попробовать API</a>
+            <a href="/api/schema/swagger-ui/" class="btn btn-primary btn-lg" target="_blank">Попробовать API</a>
             <a href="#" class="btn btn-secondary btn-lg">Узнать больше</a>
         </div>
     </div>
