--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,10 @@
 
     {% include 'components/navbar.html' %}
 
-    {% block content %}
-    {% endblock %}
+    <main class="main-content">
+        {% block content %}
+        {% endblock %}
+    </main>
 
     {% include 'components/footer.html' %}
 
