--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -5,7 +5,7 @@
   <div class="dashboard-header">
     <h1 class="dashboard-title">Мои Альбомы</h1>
     <a href="{% url 'create_album' %}" class="btn btn-primary">
-      <i class="fas fa-plus" style="margin-right: 0.5rem"></i> Новый Альбом
+      <i class="fas fa-plus btn-icon"></i> Новый Альбом
     </a>
   </div>
 
