--- a/templates/dashboard/profile_view.html
+++ b/templates/dashboard/profile_view.html
@@ -42,7 +42,7 @@
 
             <div class="profile-actions">
                 <a href="{% url 'dashboard' %}" class="btn btn-secondary">Мои Альбомы</a>
-                <a href="{% url 'edit_profile' %}" class="auth-button btn-primary" style="text-decoration: none; text-align: center; justify-content: center;">Редактировать</a>
+                <a href="{% url 'edit_profile' %}" class="auth-button btn-primary btn-edit-profile">Редактировать</a>
             </div>
         </div>
     </div>
