--- a/static/css/pages/profile_view.css
+++ b/static/css/pages/profile_view.css
@@ -18,6 +18,17 @@
     box-shadow: var(--shadow-md);
 }
 
+@media (max-width: 480px) {
+    .profile-avatar-large {
+        width: 100px;
+        height: 100px;
+    }
+    
+    .profile-username {
+        font-size: 1.25rem;
+    }
+}
+
 .profile-avatar-placeholder {
     width: 150px;
     height: 150px;
@@ -76,4 +87,10 @@
 .profile-bio {
     line-height: 1.6;
     color: var(--gray-700);
+}
+
+.btn-edit-profile {
+    text-decoration: none;
+    text-align: center;
+    justify-content: center;
 }
