--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -11,27 +11,39 @@
       <p class="auth-subtitle">Войдите, чтобы продолжить работу</p>
     </div>
 
-    {% if form.errors %}
-    <ul class="form-errors">
-      {% for field in form %} {% for error in field.errors %}
-      <li>{{ error }}</li>
-      {% endfor %} {% endfor %} {% for error in form.non_field_errors %}
-      <li>{{ error }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-
     <form method="post" class="auth-form">
       {% csrf_token %}
 
+      {% if form.non_field_errors %}
+      <ul class="form-errors">
+        {% for error in form.non_field_errors %}
+        <li>{{ error }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+
       <div class="form-group">
-        <label for="id_username" class="form-label">Имя пользователя</label>
-        <input type="text" name="username" id="id_username" class="form-input" required autofocus />
+        <label for="{{ form.username.id_for_label }}" class="form-label">Имя пользователя</label>
+        {{ form.username }}
+        {% if form.username.errors %}
+        <ul class="form-errors">
+          {% for error in form.username.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
       </div>
 
       <div class="form-group">
-        <label for="id_password" class="form-label">Пароль</label>
-        <input type="password" name="password" id="id_password" class="form-input" required />
+        <label for="{{ form.password.id_for_label }}" class="form-label">Пароль</label>
+        {{ form.password }}
+        {% if form.password.errors %}
+        <ul class="form-errors">
+          {% for error in form.password.errors %}
+          <li>{{ error }}</li>
+          {% endfor %}
+        </ul>
+        {% endif %}
       </div>
 
       <button type="submit" class="auth-button">Войти</button>
