--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -26,7 +26,7 @@
       <div class="form-group">
         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
         {{ field }} {% if field.help_text %}
-        <small style="color: var(--text-light); font-size: 0.75rem">{{ field.help_text }}</small>
+        <small class="form-help-text">{{ field.help_text }}</small>
         {% endif %}
       </div>
       {% endfor %}
