--- a/templates/dashboard/album_detail.html
+++ b/templates/dashboard/album_detail.html
@@ -21,9 +21,9 @@
         </div>
       </div>
       <div class="album-actions">
-        <a href="{% url 'generate_collage' album.id %}" class="btn-toggle public" style="text-decoration:none; padding: 0 1rem; line-height: 2.5rem; display: inline-block;">Скачать коллаж (PNG)</a>
+        <a href="{% url 'generate_collage' album.id %}" class="btn btn-primary btn-collage-download">Скачать коллаж (PNG)</a>
         {% if is_owner %}
-        <form action="{% url 'toggle_public' album.id %}" method="post" class="public-toggle-form" style="display: inline-block;">
+        <form action="{% url 'toggle_public' album.id %}" method="post" class="public-toggle-form">
           {% csrf_token %}
           <button
             type="submit"
@@ -43,7 +43,7 @@
       </p>
       <div class="share-input-group">
         <input type="text" value="{{ absolute_uri }}" readonly class="share-input" id="shareLink" />
-        <button onclick="copyLink()" class="btn-copy">Копировать</button>
+        <button class="btn-copy">Копировать</button>
       </div>
     </div>
     {% endif %} {% if is_owner or is_editor %}
@@ -65,18 +65,12 @@
             name="photos"
             type="file"
             multiple
-            onchange="this.form.submit()"
-            style="display: none" />
+            class="hidden" />
         </form>
 
         {% if is_owner %}
         <button
-          onclick="
-            if (
-              confirm('Вы уверены, что хотите удалить этот альбом? Это действие нельзя отменить.')
-            )
-              document.getElementById('delete-album-form').submit();
-          "
+          id="btn-delete-album"
           class="btn-danger">
           Удалить альбом
         </button>
@@ -84,7 +78,7 @@
           id="delete-album-form"
           action="{% url 'delete_album' album.id %}"
           method="post"
-          style="display: none">
+          class="hidden">
           {% csrf_token %}
         </form>
         {% endif %}
@@ -137,8 +131,7 @@
         <img
           src="{{ photo.image.url }}"
           alt="Photo"
-          class="photo-img"
-          onclick="openLightbox({{ forloop.counter0 }})" />
+          class="photo-img" />
         {% endif %}
       </div>
       {% empty %}
@@ -148,9 +141,9 @@
 
     <!-- Lightbox -->
     <div id="lightbox" class="lightbox">
-      <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
-      <span class="lightbox-prev" onclick="changePhoto(-1)">&#10094;</span>
-      <span class="lightbox-next" onclick="changePhoto(1)">&#10095;</span>
+      <span class="lightbox-close">&times;</span>
+      <span class="lightbox-prev">&#10094;</span>
+      <span class="lightbox-next">&#10095;</span>
       <img class="lightbox-content" id="lightbox-img" />
       <div class="lightbox-counter" id="lightbox-counter"></div>
     </div>
