--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,4 +1,3 @@
-{% load cloudinary %}
 {% load static %}
 <nav class="navbar">
   <div class="container navbar-content">
@@ -18,8 +17,8 @@
       {% if user.is_authenticated %}
       <a href="{% url 'dashboard' %}" class="nav-link nav-link-primary">Мои Альбомы</a>
       <a href="{% url 'profile' %}" class="nav-link nav-profile-link">
-        {% if user.profile.avatar %} 
-        {% cloudinary user.profile.avatar format="jpg" width=32 height=32 crop="fill" class="nav-avatar" %} 
+        {% if user.profile.avatar %}
+          <img src="{{ user.profile.avatar.url }}" class="nav-avatar" width="32" height="32" alt="{{ user.username }}" loading="lazy" style="object-fit: cover;">
         {% else %}
         <i class="fas fa-user-circle nav-avatar-icon"></i>
         {% endif %}
@@ -38,4 +37,4 @@
   </div>
 </nav>
 
-<script src="{% static 'js/components/navbar.js' %}"></script>
+<script src="{% static 'js/components/navbar.js' %}" defer></script>
