--- a/templates/dashboard/album_detail.html
+++ b/templates/dashboard/album_detail.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block title %}{{ album.title }}{% endblock %}
 
 {% block extra_css %}
@@ -128,10 +127,18 @@
       {% for photo in photos %}
       <div class="photo-card">
         {% if photo.image %}
-        <img
-          src="{{ photo.image.url }}"
-          alt="Photo"
-          class="photo-img" />
+        <img src="{{ photo.image.url }}" alt="Photo" class="photo-img" loading="lazy" />
+          
+        {% if is_owner or is_editor %}
+        <div class="photo-actions">
+           <button class="btn-share-photo" data-photo-id="{{ photo.id }}" title="Поделиться">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+                <path d="M13.5 1a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM11 2.5a2.5 2.5 0 1 1 .603 1.628l-6.718 3.12a2.499 2.499 0 0 1 0 1.504l6.718 3.12a2.5 2.5 0 1 1-.488.876l-6.718-3.12a2.5 2.5 0 1 1 0-3.256l6.718-3.12A2.5 2.5 0 0 1 11 2.5zm-8.5 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm11 5.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>
+              </svg>
+           </button>
+        </div>
+        {% endif %}
+
         {% endif %}
       </div>
       {% empty %}
@@ -153,6 +160,10 @@
     </div>
   </div>
 </div>
+
+<!-- Share Modal -->
+{% include 'components/share_photo_modal.html' %}
+
 {% endblock %} {% block extra_js %}
 <script src="{% static 'js/pages/album_detail.js' %}"></script>
 {% endblock %}
