--- a/templates/components/loader.html
+++ b/templates/components/loader.html
@@ -1,4 +1,4 @@
-<div id="full-screen-loader" class="loader-overlay" style="display: none;">
+<div id="full-screen-loader" class="loader-overlay">
     <div class="lds-ring">
         <div></div><div></div><div></div><div></div>
     </div>
