--- a/templates/dashboard/profile.html
+++ b/templates/dashboard/profile.html
@@ -1,9 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block extra_css %}
-<link href="{% static 'css/pages/auth.css' %}" rel="stylesheet">
-<link href="{% static 'css/pages/profile.css' %}" rel="stylesheet">
-{% endblock %}
 
 {% block content %}
 <div class="auth-page">
@@ -19,7 +15,7 @@
             <div class="avatar-upload-wrapper">
                 <div class="avatar-preview-container">
                     {% if user.profile.avatar %}
-                        <img src="{{ user.profile.avatar.url }}" class="avatar-image" width="150" height="150" alt="Avatar" loading="lazy" style="object-fit: cover;">
+                        <img src="{{ user.profile.avatar.url }}" class="avatar-image" width="150" height="150" alt="Avatar" loading="lazy">
                     {% else %}
                         <div class="avatar-placeholder">
                             <i class="fas fa-user"></i>
