--- a/templates/pages/security_policy.html
+++ b/templates/pages/security_policy.html
@@ -1,7 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block title %}Политика безопасности{% endblock %} {%
-block extra_css %}
-<link href="{% static 'css/pages/security_policy.css' %}" rel="stylesheet" />
-{% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% block title %}Политика безопасности{% endblock %} {% block content %}
 <div class="container security-container">
   <h1>Политика безопасности</h1>
   <p class="text-muted">Последнее обновление: 19 января 2026 г.</p>
