--- a/static/css/components/loader.css
+++ b/static/css/components/loader.css
@@ -47,7 +47,7 @@
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.8);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 9999;
