--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block extra_css %}
-<link href="{% static 'css/pages/auth.css' %}" rel="stylesheet" />
-{% endblock %} {% block content %}
+{% extends 'base.html' %} {% load static %} {% block content %}
 <div class="auth-page">
   <div class="auth-card">
     <div class="auth-header">
