--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" media="print" onload="this.media='all'">
     <noscript><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"></noscript>
     
-    <link href="{% static 'css/base/reset.css' %}" rel="stylesheet">
-    <link href="{% static 'css/components/navbar.css' %}" rel="stylesheet">
-    <link href="{% static 'css/components/footer.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.css' %}" rel="stylesheet">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
